リードミー

--- a/janken.html
+++ b/janken.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-  <title>じゃんけん</title>
+  <title>Janken_tour</title>
 </head>
 
 <body>
@@ -16,7 +16,8 @@
 
   <header>
     <div class="header_wrapper">
-      <h1>じゃん・けん・ぽん！ワールドツアー</h1>
+      <h1><i class="fas fa-plane fa-lg fa-skybule fa-rotate-315"></i> janken_World Tour <i
+          class="fas fa-plane fa-lg fa-skybule fa-rotate-315"></i> </h1>
       <button id="rule_btn" class="rule_btn btn">せつめいを読む</button>
       <button id="start_btn" class="start_btn btn">スタート！</a>
     </div>
